src/sass/components/worklist.scss
.worklist {
  //   width: 100%;
  padding-top: 100px;
  overflow: hidden;
}
.worklist-item {
  margin-bottom: 50px;
  height: 400px;
  @include make-col(11);
  transition: transform 1000ms $easeOutQuad, opacity 600ms $easeOutQuad;
  transform: translate3d(0, 300px, 0);
  opacity: 0;

  .animate-in & {
    transform: translate3d(0, 0, 0);
    opacity: 1;
  }
}

.worklist-item:nth-child(1) {
  transition-delay: 200ms;
}

.worklist-item:nth-child(3) {
  transition-delay: 600ms;
}

.worklist-item:nth-child(4) {
  transition-delay: 400ms;
}

.worklist-item:nth-child(4) {
  transition-delay: 1000ms;
}

.worklist-item:nth-child(5) {
  transition-delay: 800ms;
}

.worklist_6,
.worklist_0 {
  @include media-breakpoint-up(md) {
    margin-top: 50px;
    margin-bottom: 50px;
    height: 350px;
    @include make-col(4);
    @include make-col-offset(1);
  }
}
.worklist_7,
.worklist_1 {
  @include media-breakpoint-up(md) {
    margin-top: 0;
    margin-bottom: 50px;
    @include make-col(5);
    @include make-col-offset(1);
  }
}
.worklist_8,
.worklist_2 {
  @include media-breakpoint-up(md) {
    margin-top: 50px;
    margin-bottom: 50px;
    height: 470px;
    @include make-col(5);
    @include make-col-offset(1);
  }
}
.worklist_9,
.worklist_3 {
  @include media-breakpoint-up(md) {
    margin-top: -30px;
    margin-bottom: 50px;
    height: 470px;
    @include make-col(4);
    @include make-col-offset(1);
  }
}
.worklist_10,
.worklist_4 {
  @include media-breakpoint-up(md) {
    margin-top: -50px;
    margin-bottom: 50px;
    height: 350px;
    @include make-col(7);
  }
}
.worklist_11,
.worklist_5 {
  @include media-breakpoint-up(md) {
    margin-top: -150px;
    margin-bottom: 50px;
    height: 350px;
    @include make-col(4);
    @include make-col-offset(1);
  }
}

